--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     
       <link rel="stylesheet"
       href="RPS.css">
+    
+     <meta name="google-site-verification" content="Owc3nJlFTIYjY0xMktM1TpGKdV9dxP32lv_8K6Oc6fM" />
 
-    </head>
+  </head>
   <body>
      <p class="title" id="artText">
       Rock Paper Scissors
