--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     
      <meta name="google-site-verification" content="Owc3nJlFTIYjY0xMktM1TpGKdV9dxP32lv_8K6Oc6fM" />
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EPY8DHX48F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EPY8DHX48F');
+</script>
+
   </head>
   <body>
      <p class="title" id="artText">
