--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     
       <link rel="stylesheet"
       href="RPS.css">
+
+    <meta name="google-site-verification" content="Owc3nJlFTIYjY0xMktM1TpGKdV9dxP32lv_8K6Oc6fM" />
     
      <meta name="google-site-verification" content="Owc3nJlFTIYjY0xMktM1TpGKdV9dxP32lv_8K6Oc6fM" />
 
